--- a/package.json
+++ b/package.json
@@ -1,15 +1,23 @@
 {
   "name": "vuex-module-decorators-state",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Additional decorators for vuex-module-decorators npm package",
-  "main": "index.ts",
+  "main": "lib/index.js",
   "repository": "git@github.com:akoidan/vuex-module-decorators-state.git",
   "author": "Andrew Koidan <deathangel908@gmail.com>",
   "license": "MIT",
   "peerDependencies": {
     "vuex-module-decorators": "*"
   },
+  "files": [
+    "lib"
+  ],
+  "typings": "./lib/index.d.ts",
+  "scripts": {
+    "build": "rm -rf ./lib && tsc"
+  },
   "devDependencies": {
+    "typescript": "^4.0.3",
     "vue": "^2.6.12",
     "vuex": "^3.5.1",
     "vuex-module-decorators": "^1.0.1"
